# carbon-acx

./: .cloudflare-rebuild  .editorconfig  .env.example  .gitattributes  .gitignore  .yamllint.yml  AGENTS.md  CHANGELOG_ACX041.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SSR_FIX_STATUS.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  wrangler.toml
.claude/: skills.json
.github/: CODEOWNERS  pull_request_template.md
app/: __init__.py  app.py
artifacts/: audit_report.json  catalog.json  dependency_map.json
calc/: __init__.py  api.py  citations.py  compute_cli.py  config.yaml  copy_blocks.py  dal.py  dal_sql.py  derive.py  figures.py  figures_manifest.py  make_catalog.py  manifest.py  manifest_model.py  refs_audit.py  refs_build.py  refs_common.py  refs_fetch.py  refs_normalize.py  refs_util.py  schema.py  service.py  upstream.py
data/: activities.csv  activity_fu_map.csv  activity_schedule.csv  assets.csv  benchmarks.csv  carbon_pricing.csv  dependencies.csv  emission_factors.csv  entities.csv  equity_benchmarks.csv  feedback_loops.csv  functional_units.csv  grid_intensity.csv  icons.csv  layers.csv  operations.csv  profiles.csv  sectors.csv  sites.csv  sources.csv  units.csv
db/: schema.sql
docs/: ACX041_View_Provenance_Module_v1_2.md  ARCHITECTURE.md  CHANGELOG.md  CLOUDFLARE_PAGES_CONFIG.md  CONTRIBUTING.md  CONTRIBUTING_SERIES.md  DATA_MODEL.md  FRONTEND_POLISH_PLAN.md  MAINTENANCE_CALENDAR.md  METHOD_NOTES.md  ONLINE_METHOD_NOTES.md  README.md  TESTING_NOTES.md  USER_JOURNEYS.md  WHAT_RUNS_WHERE.md  WORDNET_PACK.md  compare.md  deploy.md  pr_history_review.md  repo-commands.html  routes.md  share-diff.md  validation.md
references/: SRC.CUTA.TTC.2017.url  harvest_errors.txt  manifest.csv
refs/: ALLOW_MISSING.txt  README.md  source_id_overrides.json  sources_manifest.csv
scripts/: _artifact_paths.py  audit_layers.py  bootstrap.sh  build-cloudflare.sh  build_en.py  build_site.py  dev_diag.sh  doctor_post_pr13.sh  export_db_to_csv.py  generate_dataset_manifest.py  generate_web_calculator_data.py  import_csv_to_db.py  lint_docs.py  migrate_to_v1_1.py  package_artifacts.py  prepare_pages_bundle.py  run_validations.py  seed_dev_db.py  sync_layers_json.py
site/: .env.production  .eslintrc.cjs  (+13 more)
(+872 files in other folders)
