[tool.poetry]
name = "carbon-acx"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Boot Industries <info@boot.industries>"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "*"
pydantic = ">=2"
plotly = "*"
dash = "*"
pyyaml = "*"
jinja2 = "*"
duckdb = {version = ">=1,<2", optional = true}

[tool.poetry.extras]
db = ["duckdb"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
