[tool.poetry]
name = "carbon-acx"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Boot Industries <info@boot.industries>"]

[tool.poetry.dependencies]
python = ">=3.11,<4"
pandas = ">=2.2,<2.3"
pydantic = ">=2.6,<3"
plotly = ">=5.19,<6"
dash = ">=2.15,<3"
pyyaml = ">=6,<7"
jinja2 = ">=3.1,<4"
duckdb = {version = ">=1,<2", optional = true}

[tool.poetry.extras]
db = ["duckdb"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9"
pytest-cov = ">=4.1,<5"
ruff = ">=0.3,<0.5"
black = ">=24.3,<25"
pip-audit = ">=2.7,<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
