[tool.poetry]
name = "carbon-acx"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Boot Industries <info@boot.industries>"]
packages = [
  { include = "calc" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
pandas = ">=2.2,<2.3"
pydantic = ">=2.6,<3"
plotly = ">=5.19,<6"
dash = ">=2.15,<3"
pyyaml = ">=6,<7"
jinja2 = ">=3.1,<4"
duckdb = {version = ">=1,<2", optional = true}
httpx = ">=0.27,<0.28"
markdownify = ">=0.11,<0.13"
trafilatura = ">=1.9,<2"
pymupdf = ">=1.24,<1.25"
"pdfminer.six" = ">=20221105"

[tool.poetry.extras]
db = ["duckdb"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9"
pytest-cov = ">=4.1,<5"
ruff = ">=0.3,<0.5"
black = ">=24.3,<25"
pip-audit = ">=2.7,<3"
kaleido = "0.2.1"
Pillow = ">=10,<11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
